--- a/indexcss.css
+++ b/indexcss.css
@@ -7,9 +7,9 @@
 
 }
 #mySlides{
-  background-image: url("image/2.jpg");
+  background-image: url("image/homepage_top_1.jpg");
   width: 100%;
   height: 550px;
-  background-size: 100% 1232px;
+  background-size: 100% 550px;
   background-repeat:no-repeat;
 }
