--- a/indexcss.css
+++ b/indexcss.css
@@ -6,8 +6,15 @@
   margin-top: -8px;
 
 }
-#mySlides{
-  background-image: url("image/homepage_top_1.jpg");
+#mySlides_1{
+  background-image: url("image/tjz_4.jpg");
+  width: 100%;
+  height: 550px;
+  background-size: 100% 550px;
+  background-repeat:no-repeat;
+}
+#mySlides_2{
+  background-image: url("image/about_bg.jpg");
   width: 100%;
   height: 550px;
   background-size: 100% 550px;
