--- a/indexcss.css
+++ b/indexcss.css
@@ -1,13 +1,13 @@
 .container{
-
-  width: 1863px;
+  margin:0 auto;
+  width:98.7%;
   height: 2120px;
   margin-left: -8px;
   margin-top: -8px;
 
 }
 #indexSlides_1{
-  margin-top: auto;
+  margin: 0 auto;
   background-image: url("image/tjz_4.jpg");
   width: 100%;
   height: 550px;
@@ -32,8 +32,8 @@
 }
 #indexSlides_2{
   background-image: url("image/News_2.jpg");
-
-  width: 1903px;
+  margin:0 auto;
+  width:102.2%;
   height: 550px;
   background-size: 100% 550px;
   background-repeat:no-repeat;
