--- a/indexcss.css
+++ b/indexcss.css
@@ -1,6 +1,9 @@
+html{
+  background-color: black;
+}
 .container{
   margin:0 auto;
-  width:98.7%;
+  width:98.4%;
   height: 2120px;
   margin-left: -8px;
   margin-top: -8px;
@@ -16,19 +19,61 @@
 }
 .logo{
   background-image: url("image/mark003.gif");
+
   position:absolute;
-  margin-left: 50px;
+  margin-left: 7.5%;
   margin-top: 50px;
   width: 126px;
   height: 70px;
   background-size: 126px 70px;
   background-repeat: no-repeat;
 }
-.logo_world{
+.logo_world_ch{
   color:white;
   position:absolute;
-  margin-left: 50px;
-  margin-top: 50px;
+  margin-left: 15%;
+  margin-top: 67px;
+}
+.logo_world_en{
+  color:white;
+  position:absolute;
+  margin-left: 15%;
+  margin-top: 87px;
+}
+.world_about{
+  color:white;
+  font-style: italic;
+  position:absolute;
+  margin-left: 45%;
+  margin-top: 67px;
+}
+.world_new{
+  color:white;
+  font-style: italic;
+  position:absolute;
+  margin-left: 54%;
+  margin-top: 67px;
+}
+.world_guide{
+  color:white;
+  font-style: italic;
+  position:absolute;
+  margin-left: 63%;
+  margin-top: 67px;
+}
+.world_axchange{
+  color:white;
+  font-style: italic;
+  position:absolute;
+  margin-left: 72%;
+  margin-top: 67px;
+}
+.world_contact{
+  color:white;
+  font-style: italic;
+  position:absolute;
+  margin-left: 81%;
+  margin-top: 67px;
 }
 #indexSlides_2{
   background-image: url("image/News_2.jpg");
