--- a/indexcss.css
+++ b/indexcss.css
@@ -1,19 +1,15 @@
-html{
-  background-color: black;
-}
 .container{
-  margin:0 auto;
-  width:98.4%;
-  height: 2120px;
-  margin-left: -8px;
-  margin-top: -8px;
-
+  max-width: 1280px;
+  max-height: 2120px;
 }
+
 #indexSlides_1{
   margin: 0 auto;
   background-image: url("image/tjz_4.jpg");
-  width: 100%;
+  width: 97.9vw;
   height: 550px;
+  margin-left: -8px;
+  margin-top: -8px;
   background-size: 100% 550px;
   background-repeat:no-repeat;
 }
@@ -21,65 +17,57 @@ html{
   background-image: url("image/mark003.gif");
 
   position:absolute;
-  margin-left: 7.5%;
+  margin-left: 170px;
   margin-top: 50px;
-  width: 126px;
+  width: 70px;
   height: 70px;
-  background-size: 126px 70px;
+  background-size: 75px 70px;
   background-repeat: no-repeat;
 }
 .logo_world_ch{
   color:white;
   position:absolute;
-  margin-left: 15%;
+  margin-left: 260px;
   margin-top: 67px;
 }
 .logo_world_en{
   color:white;
   position:absolute;
-  margin-left: 15%;
+  margin-left: 260px;
   margin-top: 87px;
 }
 .world_about{
   color:white;
   font-style: italic;
   position:absolute;
-  margin-left: 45%;
+  margin-left: 910px;
   margin-top: 67px;
 }
 .world_new{
   color:white;
   font-style: italic;
   position:absolute;
-  margin-left: 54%;
+  margin-left: 1080px;
   margin-top: 67px;
 }
 .world_guide{
   color:white;
   font-style: italic;
   position:absolute;
-  margin-left: 63%;
+  margin-left: 1250px;
   margin-top: 67px;
 }
 .world_axchange{
   color:white;
   font-style: italic;
   position:absolute;
-  margin-left: 72%;
+  margin-left: 1420px;
   margin-top: 67px;
 }
 .world_contact{
   color:white;
   font-style: italic;
   position:absolute;
-  margin-left: 81%;
+  margin-left: 1590px;
   margin-top: 67px;
-}
-#indexSlides_2{
-  background-image: url("image/News_2.jpg");
-  margin:0 auto;
-  width:102.2%;
-  height: 550px;
-  background-size: 100% 550px;
-  background-repeat:no-repeat;
 }
