--- a/indexcss.css
+++ b/indexcss.css
@@ -1,7 +1,7 @@
 .container{
   max-width: 1280px;
   max-height: 2120px;
-  
+
 }
 
 #indexSlides_1{
@@ -41,34 +41,34 @@
   color:white;
   font-style: italic;
   position:absolute;
-  margin-left: 910px;
+  margin-left: 47.3%;
   margin-top: 67px;
 }
 .world_new{
   color:white;
   font-style: italic;
   position:absolute;
-  margin-left: 1080px;
+  margin-left: 55.3%;
   margin-top: 67px;
 }
 .world_guide{
   color:white;
   font-style: italic;
   position:absolute;
-  margin-left: 1250px;
+  margin-left: 63.3%;
   margin-top: 67px;
 }
 .world_axchange{
   color:white;
   font-style: italic;
   position:absolute;
-  margin-left: 1420px;
+  margin-left: 71.3%;
   margin-top: 67px;
 }
 .world_contact{
   color:white;
   font-style: italic;
   position:absolute;
-  margin-left: 1590px;
+  margin-left: 79.3%;
   margin-top: 67px;
 }
