--- a/indexcss.css
+++ b/indexcss.css
@@ -1,6 +1,6 @@
 .container{
     max-width: 1280px;
-    max-height: 1653px;
+    max-height: 600px;
   	margin: 0 auto;
 }
 
@@ -8,7 +8,7 @@
   margin: 0 auto;
   background-image: url("image/tjz_4.jpg");
   opacity: 1;
-  width: 98.7%;
+  width: 98.23%;
   height: 550px;
   margin-left: -8px;
   margin-top: -8px;
@@ -98,14 +98,14 @@
 #indexSlides_2{
   margin: 0 auto;
   background-image: url("image/News_2.jpg");
-  width: 100.3%;
+  width: 100.6%;
   height: 550px;
-  background-size: 100% 550px;
+  background-size: 100.6% 550px;
   background-repeat:no-repeat;
 }
 .icon_new{
   position:absolute;
-  margin-left: 305px;
+  margin-left: 185px;
   margin-top: 140px;
   background-image: url("image/title_icon.png");
   width: 45px;
@@ -115,7 +115,7 @@
 .new_1{
   position:absolute;
   font-weight:bold;
-  margin-left: 310px;
+  margin-left: 190px;
   margin-top: 150px;
   font-size: 11pt;
   color: white;
@@ -123,8 +123,146 @@
 .new_2{
   position:absolute;
   font-weight:bold;
-  margin-left: 350px;
-  margin-top: 150px;
+  margin-left: 227px;
+  margin-top: 149px;
   font-size: 12pt;
   color: black;
+}
+.date_1{
+  position:absolute;
+  font-weight:bold;
+  margin-left: 190px;
+  margin-top: 220px;
+  font-size: 11pt;
+  color: black;
+}
+.date_2{
+  position:absolute;
+  font-weight:bold;
+  margin-left: 190px;
+  margin-top: 260px;
+  font-size: 11pt;
+  color: black;
+}
+.date_3{
+  position:absolute;
+  font-weight:bold;
+  margin-left: 190px;
+  margin-top: 300px;
+  font-size: 11pt;
+  color: black;
+}
+.date_4{
+  position:absolute;
+  font-weight:bold;
+  margin-left: 190px;
+  margin-top: 340px;
+  font-size: 11pt;
+  color: black;
+}
+.date_5{
+  position:absolute;
+  font-weight:bold;
+  margin-left: 190px;
+  margin-top:380px;
+  font-size: 11pt;
+  color: black;
+}
+.hr_1 {
+  position:absolute;
+  margin-left: 190px;
+  margin-top: 240px;
+  width: 350px;
+  height: 1px;
+  z-index: 2;
+  background-color: black;
+  opacity: 1.0;
+}
+.hr_2 {
+  position:absolute;
+  margin-left: 190px;
+  margin-top: 280px;
+  width: 350px;
+  height: 1px;
+  z-index: 2;
+  background-color: black;
+  opacity: 1.0;
+}
+.hr_3 {
+  position:absolute;
+  margin-left: 190px;
+  margin-top: 320px;
+  width: 350px;
+  height: 1px;
+  z-index: 2;
+  background-color: black;
+  opacity: 1.0;
+}
+.hr_4 {
+  position:absolute;
+  margin-left: 190px;
+  margin-top: 360px;
+  width: 350px;
+  height: 1px;
+  z-index: 2;
+  background-color: black;
+  opacity: 1.0;
+}
+.hr_5 {
+  position:absolute;
+  margin-left: 190px;
+  margin-top: 400px;
+  width: 350px;
+  height: 1px;
+  z-index: 2;
+  background-color: black;
+  opacity: 1.0;
+}
+.container_panel{
+  position:absolute;
+  margin-left: 600px;
+  margin-top: 110px;
+  width: 400px;
+  height: 370px;
+}
+.panel_body{
+  font-style: italic;
+  padding-left: 12px;
+  color: black;
+  font-size: 10pt;
+}
+.panel_heading_1{
+  color:black;
+  background-color: black;
+  padding:10px 15px;
+  border-bottom:1px solid transparent;
+  border-top-left-radius:3px;
+  border-top-right-radius:3px;
+}
+.panel_heading_2{
+  color:black;
+  background-color: green;
+  padding:10px 15px;
+  border-bottom:1px solid transparent;
+  border-top-left-radius:3px;
+  border-top-right-radius:3px;
+}
+.panel_heading_3{
+  color:black;
+  background-color: blue;
+  padding:10px 15px;
+  border-bottom:1px solid transparent;
+  border-top-left-radius:3px;
+  border-top-right-radius:3px;
+}
+.panel_heading_4{
+  color:black;
+  background-color: red;
+  padding:10px 15px;
+  border-bottom:1px solid transparent;
+  border-top-left-radius:3px;
+  border-top-right-radius:3px;
+}
+.panel_group .panel-heading_3 {
+  border-bottom:0
 }
