--- a/indexcss.css
+++ b/indexcss.css
@@ -1,6 +1,7 @@
 .container{
     max-width: 1280px;
     max-height: 600px;
+    width:100%;
   	margin: 0 auto;
 }
 
@@ -82,7 +83,7 @@
   font-style: italic;
   position:absolute;
   font-size: 34pt;
-  margin-left: 330px;
+  margin-left: 240px;
   margin-top: 330px;
 }
 .world_main_en{
@@ -90,7 +91,7 @@
   font-style: italic;
   position:absolute;
   font-size: 34pt;
-  margin-left: 230px;
+  margin-left: 120px;
   margin-top: 400px;
 }
 #indexSlides_2{
