--- a/indexcss.css
+++ b/indexcss.css
@@ -7,7 +7,7 @@
 
 #indexSlides_1{
   margin: 0 auto;
-  background-image: url("image/tjz_4.jpg");
+  background-image: url("image/cover_bg.jpg");
   opacity: 1;
   width: 100%;
   height: 550px;
@@ -27,6 +27,7 @@
 .logo_world_ch{
   color:white;
   position:absolute;
+  font-weight: bold;
   font-size: 12pt;
   margin-left: 80px;
   margin-top: 20px;
@@ -34,6 +35,7 @@
 .logo_world_en{
   color:white;
   position:absolute;
+  font-weight: bold;
   font-size: 12pt;
   margin-left: 80px;
   margin-top: 40px;
@@ -80,6 +82,7 @@
 }
 .world_main_ch{
   color:white;
+  font-weight: bold;
   font-style: italic;
   position:absolute;
   font-size: 34pt;
