--- a/indexcss.css
+++ b/indexcss.css
@@ -229,42 +229,85 @@
 }
 .panel_body{
   font-style: italic;
-  padding-left: 12px;
+  margin-left: -30px;
   color: black;
   font-size: 10pt;
 }
-.panel_heading_1{
-  color:black;
-  background-color: black;
-  padding:10px 15px;
-  border-bottom:1px solid transparent;
-  border-top-left-radius:3px;
-  border-top-right-radius:3px;
+.panel-heading_1{
+  border-radius: 4px;
+  background-color:#b2adad;
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 28px;
+  padding: 20px;
+  width: 200px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
 }
-.panel_heading_2{
-  color:black;
-  background-color: green;
-  padding:10px 15px;
-  border-bottom:1px solid transparent;
-  border-top-left-radius:3px;
-  border-top-right-radius:3px;
+.panel-heading_2{
+  border-radius: 4px;
+  background-color:#a5e2a5 ;
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 28px;
+  padding: 20px;
+  width: 200px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
 }
-.panel_heading_3{
-  color:black;
-  background-color: blue;
-  padding:10px 15px;
-  border-bottom:1px solid transparent;
-  border-top-left-radius:3px;
-  border-top-right-radius:3px;
+.panel-heading_3{
+  border-radius: 4px;
+  background-color:rgba(255, 156, 0, 0.65);
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 28px;
+  padding: 20px;
+  width: 200px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
 }
-.panel_heading_4{
-  color:black;
-  background-color: red;
-  padding:10px 15px;
-  border-bottom:1px solid transparent;
-  border-top-left-radius:3px;
-  border-top-right-radius:3px;
+.panel-heading_4{
+  border-radius: 4px;
+  background-color:rgba(255, 0, 0, 0.64);
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 28px;
+  padding: 20px;
+  width: 200px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
 }
-.panel_group .panel-heading_3 {
-  border-bottom:0
+.panel-heading_1, .panel-heading_2, .panel-heading_3, .panel-heading_4, .panel-heading_5{
+  border-bottom:10;
+}
+.panel-heading_1 span, .panel-heading_2 span, .panel-heading_3 span, .panel-heading_4 span, .panel-heading_5 span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.panel-heading_1 span:after, .panel-heading_2 span:after, .panel-heading_3 span:after, .panel-heading_4 span:after, .panel-heading_5 span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.panel-heading_1:hover span, .panel-heading_2:hover span, .panel-heading_3:hover span, .panel-heading_4:hover span, .panel-heading_5:hover span {
+  padding-right: 25px;
+}
+#wrapper {
+  overflow: hidden;
+  transition: height 200ms;
 }
