--- a/indexcss.css
+++ b/indexcss.css
@@ -7,7 +7,7 @@
 
 #indexSlides_1{
   margin: 0 auto;
-  background-image: url("image/cover_bg.jpg");
+  background-image: url("image/home_cover.jpg");
   opacity: 1;
   width: 100%;
   height: 550px;
@@ -15,7 +15,7 @@
   background-repeat:no-repeat;
 }
 .logo{
-  background-image: url("image/mark003.gif");
+  background-image: url("image/logo.gif");
   position:absolute;
   margin-left: 0px;
   margin-top: 10px;
@@ -99,7 +99,7 @@
 }
 #indexSlides_2{
   margin: 0 auto;
-  background-image: url("image/News_2.jpg");
+  background-image: url("image/home_bg1.jpg");
   width: 100%;
   height: 550px;
   background-size: 100% 550px;
@@ -109,7 +109,7 @@
   position:absolute;
   margin-left: 185px;
   margin-top: 140px;
-  background-image: url("image/title_icon.png");
+  background-image: url("image/home_dot.png");
   width: 45px;
   height: 37px;
   background-size: 45px 37px;
