--- a/indexcss.css
+++ b/indexcss.css
@@ -315,3 +315,80 @@
   font-weight: bold;
   font-style: italic;
 }
+#indexSlides_3{
+  margin: 0 auto;
+  background-image: url("image/home_bg2.jpg");
+  width: 100%;
+  height: 550px;
+  background-size: 100% 550px;
+  background-repeat:no-repeat;
+}
+.picture_1{
+  position: absolute;
+  background-image: url("image/home_pic1.jpg");
+  margin-left: 136px;
+  margin-top: 141px;
+  width: 600px;
+  height: 350px;
+  background-size: 600px 350px;
+  background-repeat:no-repeat;
+}
+.picture_2{
+  position: absolute;
+  background-image: url("image/home_pic2.jpg");
+  z-index:1;
+  margin-left: 641px;
+  margin-top: 46px;
+  width: 490px;
+  height: 272px;
+  background-size: 490px 272px;
+  background-repeat:no-repeat;
+}
+#indexSlides_4{
+  margin: 0 auto;
+  background-image: url("image/home_bg3.png");
+  width: 100%;
+  height: 208px;
+  background-size: 100% 208px;
+  background-repeat:no-repeat;
+}
+.icon_bg1{
+  position: absolute;
+  background-image: url("image/home_icon1.png");
+  margin-left: 233px;
+  margin-top: 50px;
+  width: 100px;
+  height: 100px;
+  background-size: 100px 100px;
+  background-repeat:no-repeat;
+}
+.icon_bg2{
+  position: absolute;
+  background-image: url("image/home_icon2.png");
+  margin-left: 459px;
+  margin-top: 50px;
+  width: 100px;
+  height: 100px;
+  background-size: 100px 100px;
+  background-repeat:no-repeat;
+}
+.icon_bg3{
+  position: absolute;
+  background-image: url("image/home_icon3.png");
+  margin-left: 689px;
+  margin-top: 50px;
+  width: 100px;
+  height: 100px;
+  background-size: 100px 100px;
+  background-repeat:no-repeat;
+}
+.icon_bg4{
+  position: absolute;
+  background-image: url("image/home_icon4.png");
+  margin-left: 914px;
+  margin-top: 50px;
+  width: 100px;
+  height: 100px;
+  background-size: 100px 100px;
+  background-repeat:no-repeat;
+}
