--- a/css/style_MCS.css
+++ b/css/style_MCS.css
@@ -7,7 +7,7 @@
 }
 #indexSlides_1{
   margin: 0 auto;
-  background-image: url("../image/guide_cover.jpg");
+  background-image: url("../image/border.png");
   opacity: 1;
   width: 100%;
   height: 550px;
