--- a/css/style_SS.css
+++ b/css/style_SS.css
@@ -111,7 +111,7 @@
 }
 #indexSlides_2{
   margin: 0 auto;
-  background-image: url("../image/footer_pic2.jpg");
+  background-image: url("../image/border.png");
   width: 100%;
   height: 80px;
   background-size: 100% 80px;
