--- a/css/style_MCS.css
+++ b/css/style_MCS.css
@@ -7,7 +7,7 @@
 }
 #indexSlides_1{
   margin: 0 auto;
-  background-image: url("../image/border.png");
+  background-image: url("../image/guide_cover.png");
   opacity: 1;
   width: 100%;
   height: 550px;
@@ -99,7 +99,7 @@
 }
 #indexSlides_2{
   margin: 0 auto;
-  background-image: url("../image/footer_pic2.jpg");
+  background-image: url("../image/border.png");
   width: 100%;
   height: 80px;
   background-size: 100% 80px;
