--- a/css/style_OCS.css
+++ b/css/style_OCS.css
@@ -5,6 +5,12 @@
     max-height: 600px;
     width:100%;
 }
+.container_mini{
+  margin: 0 auto;
+    max-width: 1280px;
+    max-height: 80px;
+    width:100%;
+}
 #indexSlides_1{
   margin: 0 auto;
   background-image: url("../image/guide_cover.jpg");
@@ -104,6 +110,24 @@
   height: 80px;
   background-size: 100% 80px;
   background-repeat:no-repeat;
+}
+.home_logo{
+  position: absolute;
+  background-image: url("../image/home_icon.png");
+  z-index: 2;
+  margin-left: 70px;
+  margin-top: 32px;
+  width: 24px;
+  height: 24px;
+  background-size: 24px 24px;
+  background-repeat:no-repeat;
+}
+.link_SS{
+  position: absolute;
+  margin-left: 124px;
+  margin-top: 28px;
+  font-size: 16pt;
+  color:black;
 }
 #indexSlides_3{
   margin: 0 auto;
