--- a/css/style_about.css
+++ b/css/style_about.css
@@ -5,12 +5,7 @@
     max-height: 600px;
     width:100%;
 }
-.container_mini{
-  margin: 0 auto;
-    max-width: 1280px;
-    max-height: 80px;
-    width:100%;
-}
+
 .container_large{
   margin: 0 auto;
     max-width: 1280px;
@@ -116,6 +111,30 @@
   height: 80px;
   background-size: 100% 80px;
   background-repeat:no-repeat;
+}
+.home_logo{
+  position: absolute;
+  background-image: url("../image/home_icon.png");
+  z-index: 2;
+  margin-left: 70px;
+  margin-top: 32px;
+  width: 24px;
+  height: 24px;
+  background-size: 24px 24px;
+  background-repeat:no-repeat;
+}
+.link_SS{
+  position: absolute;
+  margin-left: 124px;
+  margin-top: 28px;
+  font-size: 16pt;
+  color:black;
+}
+.container_mini{
+  margin: 0 auto;
+    max-width: 1280px;
+    max-height: 80px;
+    width:100%;
 }
 #indexSlides_3{
   margin: 0 auto;
