--- a/css/style_SS.css
+++ b/css/style_SS.css
@@ -14,7 +14,7 @@
 .container_large{
   margin: 0 auto;
     max-width: 1280px;
-    max-height: 1228px;
+    max-height: 3000px;
     width:100%;
 }
 #indexSlides_1{
@@ -121,7 +121,6 @@
   position: absolute;
   background-image: url("../image/home_icon.png");
   z-index: 2;
-  margin-left: 70px;
   margin-top: 32px;
   width: 24px;
   height: 24px;
@@ -130,17 +129,168 @@
 }
 .link_SS{
   position: absolute;
-  margin-left: 124px;
+  margin-left: 44px;
   margin-top: 28px;
   font-size: 16pt;
   color:black;
+}
+.container_panel{
+  position:absolute;
+  margin-top: 110px;
+  width: 1280px;
+  height: 370px;
+}
+.panel_body{
+  font-style: italic;
+  margin-left: -30px;
+  color: black;
+  font-size: 10pt;
+}
+.panel-heading_1{
+  border-radius: 4px;
+  background-color:#b2adad;
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 28px;
+  padding: 20px;
+  width: 100%;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+
+.panel-heading_2{
+  border-radius: 4px;
+  background-color:#a5e2a5 ;
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 28px;
+  padding: 20px;
+  width: 100%;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+.panel-heading_3{
+  border-radius: 4px;
+  background-color:rgba(255, 156, 0, 0.65);
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 28px;
+  padding: 20px;
+  width: 100%;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+.panel-heading_4{
+  border-radius: 4px;
+  background-color:rgba(255, 0, 0, 0.64);
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 28px;
+  padding: 20px;
+  width: 100%;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+.panel-heading_5{
+  border-radius: 4px;
+  background-color:#b2adad;
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 28px;
+  padding: 20px;
+  width: 100%;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+
+.panel-heading_6{
+  border-radius: 4px;
+  background-color:#a5e2a5 ;
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 28px;
+  padding: 20px;
+  width: 100%;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+.panel-heading_7{
+  border-radius: 4px;
+  background-color:rgba(255, 156, 0, 0.65);
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 28px;
+  padding: 20px;
+  width: 100%;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+.panel-heading_8{
+  border-radius: 4px;
+  background-color:rgba(255, 0, 0, 0.64);
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 28px;
+  padding: 20px;
+  width: 100%;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+.panel-heading_1, .panel-heading_2, .panel-heading_3, .panel-heading_4, .panel-heading_5, .panel-heading_6, .panel-heading_7, .panel-heading_8{
+  border-bottom:10;
+}
+.panel-heading_1 span, .panel-heading_2 span, .panel-heading_3 span, .panel-heading_4 span, .panel-heading_5 span, .panel-heading_6 span, .panel-heading_7 span, .panel-heading_8 span  {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.panel-heading_1 span:after, .panel-heading_2 span:after, .panel-heading_3 span:after, .panel-heading_4 span:after, .panel-heading_5 span:after, .panel-heading_6 span:after, .panel-heading_7 span:after, .panel-heading_8 span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 1.5s;
+}
+.panel-heading_1:hover span, .panel-heading_2:hover span, .panel-heading_3:hover span, .panel-heading_4:hover span, .panel-heading_5:hover span, .panel-heading_6:hover span, .panel-heading_7:hover span, .panel-heading_8:hover span {
+  padding-right: 105px;
+}
+#wrapper_1, #wrapper_2, #wrapper_3, #wrapper_4, #wrapper_5, #wrapper_6, #wrapper_7, #wrapper_8 {
+  overflow: hidden;
+  transition: height 1500ms;
+}
+.text{
+  border-bottom-style: dotted;
+  margin-left: 8px;
+  font-weight: bold;
+  font-size: 22pt;
+  color:black;
+  font-style: italic;
 }
 #indexSlides_3{
   margin: 0 auto;
   background-image: url("../image/guide_bg.jpg");
   width: 100%;
-  height: 1228px;
-  background-size: 100% 1228px;
+  height: 1480px;
+  background-size: 100% 1480px;
   background-repeat:no-repeat;
 }
 
