--- a/css/style_guide.css
+++ b/css/style_guide.css
@@ -40,6 +40,71 @@
   margin-left: 80px;
   margin-top: 40px;
 }
+.logo_world_ch1{
+  color:white;
+  position:absolute;
+  font-weight: bold;
+  font-size: 12pt;
+  margin-left: 78px;
+  margin-top: 18px;
+}
+.logo_world_en1{
+  color:white;
+  position:absolute;
+  font-weight: bold;
+  font-size: 12pt;
+  margin-left: 79px;
+  margin-top: 38px;
+}
+
+.language_en1{
+  color:white;
+  font-style: italic;
+  font-size: 10pt;
+  position:absolute;
+  margin-left: 1078px;
+  margin-top: 3px;
+}
+.language_line1{
+  color:white;
+  font-style: italic;
+  font-size: 12pt;
+  position:absolute;
+  margin-left: 1101px;
+  margin-top: 2px;
+}
+.language_ch1{
+  color:white;
+  font-style: italic;
+  font-size: 10pt;
+  position:absolute;
+  margin-left: 1108px;
+  margin-top: 4px;
+}
+.language_en{
+  color:black;
+  font-style: italic;
+  font-size: 10pt;
+  position:absolute;
+  margin-left: 1080px;
+  margin-top: 5px;
+}
+.language_line{
+  color:black;
+  font-style: italic;
+  font-size: 12pt;
+  position:absolute;
+  margin-left: 1103px;
+  margin-top: 4px;
+}
+.language_ch{
+  color:black;
+  font-style: italic;
+  font-size: 10pt;
+  position:absolute;
+  margin-left: 1110px;
+  margin-top: 6px;
+}
 .world_about{
   color:black;
   font-style: italic;
@@ -80,6 +145,48 @@
   margin-left: 1050px;
   margin-top: 27px;
 }
+
+.world_about1{
+  color:white;
+  font-style: italic;
+  font-size: 14pt;
+  position:absolute;
+  margin-left: 648px;
+  margin-top: 25px;
+}
+.world_new1{
+  color:white;
+  font-style: italic;
+  font-size: 14pt;
+  position:absolute;
+  margin-left: 748px;
+  margin-top: 25px;
+}
+.world_guide1{
+  color:white;
+  font-style: italic;
+  font-size: 14pt;
+  position:absolute;
+  margin-left: 848px;
+  margin-top: 25px;
+}
+.world_axchange1{
+  color:white;
+  font-style: italic;
+  font-size: 14pt;
+  position:absolute;
+  margin-left: 948px;
+  margin-top: 25px;
+}
+.world_contact1{
+  color:white;
+  font-style: italic;
+  font-size: 14pt;
+  position:absolute;
+  margin-left: 1048px;
+  margin-top: 25px;
+}
+
 .world_main_ch{
   z-index: 5;
   color:black;
