--- a/css/style_exchange.css
+++ b/css/style_exchange.css
@@ -25,7 +25,7 @@
   background-repeat: no-repeat;
 }
 .logo_world_ch{
-  color:white;
+  color:black;
   position:absolute;
   font-weight: bold;
   font-size: 12pt;
@@ -33,15 +33,80 @@
   margin-top: 20px;
 }
 .logo_world_en{
-  color:white;
+  color:black;
   position:absolute;
   font-weight: bold;
   font-size: 12pt;
   margin-left: 80px;
   margin-top: 40px;
 }
-.world_about{
+.logo_world_ch1{
   color:white;
+  position:absolute;
+  font-weight: bold;
+  font-size: 12pt;
+  margin-left: 78px;
+  margin-top: 18px;
+}
+.logo_world_en1{
+  color:white;
+  position:absolute;
+  font-weight: bold;
+  font-size: 12pt;
+  margin-left: 79px;
+  margin-top: 38px;
+}
+
+.language_en1{
+  color:white;
+  font-style: italic;
+  font-size: 10pt;
+  position:absolute;
+  margin-left: 1078px;
+  margin-top: 3px;
+}
+.language_line1{
+  color:white;
+  font-style: italic;
+  font-size: 12pt;
+  position:absolute;
+  margin-left: 1101px;
+  margin-top: 2px;
+}
+.language_ch1{
+  color:white;
+  font-style: italic;
+  font-size: 10pt;
+  position:absolute;
+  margin-left: 1108px;
+  margin-top: 4px;
+}
+.language_en{
+  color:black;
+  font-style: italic;
+  font-size: 10pt;
+  position:absolute;
+  margin-left: 1080px;
+  margin-top: 5px;
+}
+.language_line{
+  color:black;
+  font-style: italic;
+  font-size: 12pt;
+  position:absolute;
+  margin-left: 1103px;
+  margin-top: 4px;
+}
+.language_ch{
+  color:black;
+  font-style: italic;
+  font-size: 10pt;
+  position:absolute;
+  margin-left: 1110px;
+  margin-top: 6px;
+}
+.world_about{
+  color:black;
   font-style: italic;
   font-size: 14pt;
   position:absolute;
@@ -49,7 +114,7 @@
   margin-top: 27px;
 }
 .world_new{
-  color:white;
+  color:black;
   font-style: italic;
   font-size: 14pt;
   position:absolute;
@@ -57,7 +122,7 @@
   margin-top: 27px;
 }
 .world_guide{
-  color:white;
+  color:black;
   font-style: italic;
   font-size: 14pt;
   position:absolute;
@@ -65,7 +130,7 @@
   margin-top: 27px;
 }
 .world_axchange{
-  color:white;
+  color:black;
   font-style: italic;
   font-size: 14pt;
   position:absolute;
@@ -73,29 +138,89 @@
   margin-top: 27px;
 }
 .world_contact{
-  color:white;
+  color:black;
   font-style: italic;
   font-size: 14pt;
   position:absolute;
   margin-left: 1050px;
   margin-top: 27px;
 }
-.world_main_ch{
+
+.world_about1{
   color:white;
-  font-weight: bold;
+  font-style: italic;
+  font-size: 14pt;
+  position:absolute;
+  margin-left: 648px;
+  margin-top: 25px;
+}
+.world_new1{
+  color:white;
+  font-style: italic;
+  font-size: 14pt;
+  position:absolute;
+  margin-left: 748px;
+  margin-top: 25px;
+}
+.world_guide1{
+  color:white;
+  font-style: italic;
+  font-size: 14pt;
+  position:absolute;
+  margin-left: 848px;
+  margin-top: 25px;
+}
+.world_axchange1{
+  color:white;
+  font-style: italic;
+  font-size: 14pt;
+  position:absolute;
+  margin-left: 948px;
+  margin-top: 25px;
+}
+.world_contact1{
+  color:white;
+  font-style: italic;
+  font-size: 14pt;
+  position:absolute;
+  margin-left: 1048px;
+  margin-top: 25px;
+}
+
+
+.world_main_ch{
+  z-index: 5;
+  color:black;
   font-style: italic;
   position:absolute;
-  font-size: 34pt;
-  margin-left: 240px;
+  font-size: 60pt;
+  margin-left: 216px;
   margin-top: 330px;
 }
+.world_main_ch_p{
+  color:white;
+  font-style: italic;
+  position:absolute;
+  font-size: 60pt;
+  margin-left: 218px;
+  margin-top: 328px;
+}
 .world_main_en{
+  z-index: 5;
+  color:black;
+  font-style: italic;
+  position:absolute;
+  font-size: 34pt;
+  margin-left: 543px;
+  margin-top: 451px;
+}
+.world_main_en_p{
   color:white;
   font-style: italic;
   position:absolute;
   font-size: 34pt;
-  margin-left: 120px;
-  margin-top: 400px;
+  margin-left: 545px;
+  margin-top: 450px;
 }
 #indexSlides_2{
   margin: 0 auto;
