--- a/css/style_exchange.css
+++ b/css/style_exchange.css
@@ -222,6 +222,14 @@
   margin-left: 545px;
   margin-top: 450px;
 }
+a div{
+transition-property: color;
+transition-duration: 0.5s;
+transition-timing-function: linear
+}
+a div:hover{
+  color: #ff7b29;
+}
 #indexSlides_2{
   margin: 0 auto;
   background-image: url("../image/border.png");
@@ -397,4 +405,27 @@ background-image: url("../image/exchange_pic6.jpg");
   margin-left: 590px;
   margin-top: 45.5px;
   font-family:DFKai-sb;
+}
+
+
+@-webkit-keyframes spaceboots {
+	0% { -webkit-transform: translate(2px, 1px) rotate(0deg); }
+	10% { -webkit-transform: translate(-1px, -2px) rotate(-1deg); }
+	20% { -webkit-transform: translate(-3px, 0px) rotate(1deg); }
+	30% { -webkit-transform: translate(0px, 2px) rotate(0deg); }
+	40% { -webkit-transform: translate(1px, -1px) rotate(1deg); }
+	50% { -webkit-transform: translate(-1px, 2px) rotate(-1deg); }
+	60% { -webkit-transform: translate(-3px, 1px) rotate(0deg); }
+	70% { -webkit-transform: translate(2px, 1px) rotate(-1deg); }
+	80% { -webkit-transform: translate(-1px, -1px) rotate(1deg); }
+	90% { -webkit-transform: translate(2px, 2px) rotate(0deg); }
+	100% { -webkit-transform: translate(1px, -2px) rotate(-1deg); }
+}
+.shake:hover,
+.label_01:hover, .label_02:hover, .label_03:hover, .label_11:hover, .label_12:hover, .label_13:hover {
+	-webkit-animation-name: spaceboots;
+	-webkit-animation-duration: 0.8s;
+	-webkit-transform-origin:50% 50%;
+	-webkit-animation-iteration-count: infinite;
+	-webkit-animation-timing-function: linear;
 }
